# ecodrop

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/mobile/: AGENTS.md  capacitor.config.ts  index.html  package.json  tsconfig.json
apps/web-admin/: AGENTS.md  next.config.mjs  package.json  tsconfig.json
docs/api/: API_CONTRACT.md  ecodrop-openapi.seed.yaml
docs/architecture/: README.md
docs/plans/: README.md  TEAM_ASSIGNMENT_3_PERSON.md
docs/references/: CONTEXT.md
iot/smartbin-esp32/: AGENTS.md  README.md  platformio.ini  (+1 more)
services/ai-cv/: AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai-cv/app/: main.py
services/ai-cv/app/core/: config.py
services/ai-cv/app/models/: schemas.py
services/ai-cv/app/services/: mock_validator.py  opencv_measure.py  points.py  roboflow_client.py  validator.py
services/ai-cv/tests/: test_validation_service.py  test_validator_rules.py
services/backend/: AGENTS.md  README.md  pyproject.toml  requirements.txt
services/backend/app/: main.py
services/backend/app/core/: auth.py  config.py
services/backend/app/models/: schemas.py
services/backend/app/repositories/: __init__.py  base.py  memory.py  mongo.py
services/backend/app/services/: ai_client.py  command_queue.py  persistence.py  rewards.py  state.py
services/backend/tests/: conftest.py  test_admin_content_auth.py  test_ai_client.py  test_deposit_lifecycle.py  test_persistence_adapters.py  test_rewards_and_integrations.py
(+35 files in other folders)
