[project]
name = "ecodrop-backend"
version = "0.1.0"
description = "EcoDrop FastAPI backend scaffold"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "motor>=3.3.2",
  "redis>=5.0.1",
  "python-jose[cryptography]>=3.3.0",
  "pytest>=8.2.0"
]

[tool.ruff]
line-length = 100
